[package]
name = "drc"
description = "A Rust library to add a new \"Drc\" smart pointer."
repository = "https://github.com/0-0-1/drc"
documentation = "https://docs.rs/drc/"
version = "0.1.2"
authors = ["0-0-1 <0-0-1@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

keywords = ["drc", "rc", "pointer"]
categories = ["memory-management"]
readme = "CRATES-IO.md"

include = ["Cargo.toml", "src/**/*.rs", "CRATES-IO.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
